[package]
name = "rohe"
version = "2.0.0"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
clap = { version = "4.0.19", features = ["cargo", "wrap_help", "derive"] }
hyper = "0.14.22"
lazy_static = "1.4.0"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
# serde = "1.0.127"
serde_json = "1.0.87"
# tokio = {version = "0.2", features = ["full"]}
tokio = { version = "1.21.2", features = ["full"] }
# async-std = { verson = "1", features = ["attributes", "tokio1"] }
