[package]
name = "rohe"
version = "2.0.2"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.43", features = ["cargo", "wrap_help", "derive"] }
hyper = "1.6.0"
lazy_static = "1.5.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
